<resources>
    <string name="app_name">Minimal Vk Client</string>
    <integer name="com_vk_sdk_AppId">7502125</integer>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialogs_fragment_label">Диалоги</string>
    <string name="notifications_fragment_label">Уведомления</string>
    <string name="search_fragment_label">Поиск</string>
    <string name="profile_fragment_label">Профиль</string>
    <string name="wall_fragment_label">Новости</string>
    <string name="menu_logout">Выйти</string>
    <string name="expandable_text_view_show_more_value">Показать полностью...</string>
</resources>
