<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/wallFragment"
          android:title="@string/wall_fragment_label"
          android:icon="@drawable/ic_favorite_24dp"/>

    <item android:id="@+id/dialogsFragment"
          android:title="@string/dialogs_fragment_label"
          android:icon="@drawable/ic_dialogs_24dp"/>
    <item android:id="@+id/searchFragment"
          android:title="@string/search_fragment_label"
          android:icon="@drawable/ic_search_24dp"/>

    <item android:id="@+id/notificationsFragment"
          android:title="@string/notifications_fragment_label"
          android:icon="@drawable/ic_notifications_24dp"/>

    <item android:id="@+id/profileFragment"
          android:title="@string/profile_fragment_label"
          android:icon="@drawable/ic_profile_24dp"/>


</menu>