<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/bottom_nav_graph.xml"
            app:startDestination="@id/wallFragment">

    <fragment android:id="@+id/dialogsFragment"
              android:name="com.aevshvetsov.minimalvkclient.fragments.DialogsFragment"
              android:label="@string/dialogs_fragment_label" tools:layout="@layout/fragment_dialogs"/>

    <fragment android:id="@+id/notificationsFragment"
              android:name="com.aevshvetsov.minimalvkclient.fragments.NotificationFragment"
              android:label="@string/notifications_fragment_label"
              tools:layout="@layout/fragment_notification"/>

    <fragment
            android:id="@+id/searchFragment"
            android:name="com.aevshvetsov.minimalvkclient.fragments.SearchFragment"
            android:label="@string/search_fragment_label" tools:layout="@layout/fragment_search"/>

    <fragment android:id="@+id/profileFragment"
              android:name="com.aevshvetsov.minimalvkclient.fragments.ProfileFragment"
              android:label="@string/profile_fragment_label"
              tools:layout="@layout/profile_fragment"/>
    <fragment android:id="@+id/wallFragment"
              android:name="com.aevshvetsov.minimalvkclient.fragments.WallFragment"
              android:label="@string/wall_fragment_label" tools:layout="@layout/users_wall_fragment"/>
</navigation>